--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+html{
+    font-size: 62.5%;
+    font-family: 'Gotham', sans-serif;
+  
+    @media screen and (max-width: 1500px) {
+        font-size: 58%;
+    }
+  
+    @media screen and (max-width: 1230px) {
+        font-size: 52%;
+    }
 }
+  
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 24.5rem;
+    padding: 2rem 1rem;
 }
