change logo to svg

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,10 @@ html{
     padding: 2rem 1rem;
 }
 
+.Header__logo {
+    max-width: 10rem;
+}
+
 .Header__menu-btn {
     position: absolute;
     width: 3rem;
