--- a/src/Assets/sass/_mixins.scss
+++ b/src/Assets/sass/_mixins.scss
@@ -14,3 +14,31 @@
                 }
         }
 }
+
+@mixin transform($property) {
+    -webkit-transform: $property;
+    -ms-transform: $property;
+    -o-transform: $property;
+    transform: $property;
+}
+
+@mixin transition($property: 0.3s ease-out) {
+    -webkit-transition: $property;
+    -o-transition: $property;
+    transition: $property;
+}
+
+@mixin placeholder($color) {
+    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: $color; 
+    }
+    & { /* Firefox 19+ */
+        color: $color;
+    }
+    &:-ms-input-placeholder { /* IE 10+ */
+        color: $color;
+    }
+    &:-moz-placeholder { /* Firefox 18- */
+        color: $color;
+    }
+}
