--- a/src/Assets/sass/App.scss
+++ b/src/Assets/sass/App.scss
@@ -225,7 +225,13 @@ main {
     text-align: right;
 }
 
-    .Topbar__notifications-btn {
+    .Topbar__item {
+        display: inline-block;
+        vertical-align: middle;
+        margin-left: 4rem;
+    }
+
+    .Topbar__notifications-btn {    
 
         &:hover {
 
@@ -243,7 +249,6 @@ main {
     }
 
     .Topbar__help-btn {
-        margin-left: 4rem;
 
         &:hover {
 
@@ -261,4 +266,31 @@ main {
                     @include transition;
                 }
         }
+    }
+
+    .Topbar__profile-btn {
+        
+        &:hover {
+
+                p {
+                    color: $red;
+                }
+        }
+
+            img {
+                display: inline-block;
+                vertical-align: middle;
+                width: 5rem;
+                border-radius: 2.5rem;
+                margin-right: 1.5rem;
+            }
+
+            p {
+                display: inline-block;
+                vertical-align: middle;
+                margin: 0;
+                font-size: 1.3rem;
+                color: white;
+                @include transition;
+            }
     }
